fixed the overflow

--- a/Styles/products.css
+++ b/Styles/products.css
@@ -1,7 +1,3 @@
-.container {
-    width: 100%;
-}
-
 .container table {
     width: 100%;
 }
